--- a/css/main.css
+++ b/css/main.css
@@ -183,10 +183,7 @@ button span::after {
     padding: 1rem 0;
 }
 
-.carousel-item img {
-    filter: sepia(30%);
-    filter: brightness(60%)
-}
+.carousel-item img {}
 
 .line {
     border-bottom: 2px solid var(--color-text);
@@ -194,6 +191,7 @@ button span::after {
 
 main .container-fluid {
     background-color: var(--block-color);
+    margin-top: 0 !important;
 }
 
 main .container-fluid img {
@@ -210,7 +208,7 @@ main .container-fluid h2 {
     padding: 1rem 1rem 0 1rem;
     font-family: 'Orbitron', sans-serif;
     font-weight: bolder;
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--color-main-black);
     text-transform: uppercase;
 }
@@ -231,6 +229,22 @@ main .container-fluid h2 {
     text-transform: uppercase;
     -webkit-text-stroke: 2px var(--color-text);
 }
+
+.rectangle {
+    background-color: var(--block-color-light);
+    width: 100%;
+    height: 20px;
+    margin-top: 1rem;
+    padding-bottom: 1.5rem;
+
+}
+
+.rectangle img {
+    margin-bottom: 1rem;
+    background-color: #7c7875;
+
+}
+
 
 @media (prefers-reduced-motion: reduce) {
     .marquee__content {
