--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,3 @@
-
-
-
 .row {
     font-family: 'VT323', monospace;
     font-size: 4rem;
@@ -20,6 +17,8 @@ p {
 .form input {
     background-color: var(--block-color-light);
     border-radius: 0;
+    font-family: 'VT323', monospace;
+    font-size: 1.5rem;
 }
 
 .form label {
@@ -36,6 +35,8 @@ textarea {
     background-color: var(--block-color-light) !important;
     border-radius: 0 !important;
     resize: none;
+    font-family: 'VT323', monospace;
+    font-size: 1.5rem !important;
 }
 
 .btn {
